--- a/src/GUIs/GameWindow.form
+++ b/src/GUIs/GameWindow.form
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUIs.GameWindow">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="4" vgap="4">
+    <margin top="4" left="4" bottom="4" right="4"/>
     <constraints>
-      <xy x="20" y="92" width="1129" height="768"/>
+      <xy x="20" y="92" width="1308" height="1057"/>
     </constraints>
     <properties>
       <background color="-11382962"/>
       <doubleBuffered value="false"/>
       <font name="Courier New" size="14" style="1"/>
       <foreground color="-1"/>
-      <minimumSize width="1080" height="480"/>
+      <minimumSize width="1080" height="560"/>
       <opaque value="false"/>
-      <preferredSize width="1080" height="480"/>
+      <preferredSize width="1080" height="560"/>
     </properties>
     <border type="none"/>
     <children>
@@ -51,8 +51,9 @@
       <grid id="81aca" binding="pnlGameLog" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="400"/>
+            <maximum-size width="400" height="505"/>
           </grid>
         </constraints>
         <properties>
@@ -66,8 +67,9 @@
         <children>
           <component id="fe6c1" class="javax.swing.JTextArea" binding="txtGameLog">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="400" height="500"/>
+                <maximum-size width="400" height="500"/>
               </grid>
             </constraints>
             <properties>
@@ -88,7 +90,7 @@
       <grid id="1414f" binding="pnlMobs" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-11382962"/>
@@ -187,7 +189,7 @@
       <grid id="dd5d3" binding="pnlGame" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
         </constraints>
         <properties>
           <background color="-11382962"/>
@@ -202,7 +204,7 @@
           <grid id="87b9e" binding="pnlHpBar" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="26"/>
                 <preferred-size width="-1" height="26"/>
                 <maximum-size width="-1" height="26"/>
@@ -290,7 +292,7 @@
           <grid id="36bad" binding="pnlInventory" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="420" height="200"/>
                 <preferred-size width="420" height="200"/>
               </grid>
@@ -317,7 +319,7 @@
                 <properties>
                   <background color="-11382962"/>
                   <doubleBuffered value="false"/>
-                  <font name="Courier New" size="14" style="1"/>
+                  <font name="Courier New" size="12" style="1"/>
                   <foreground color="-1"/>
                   <opaque value="true"/>
                   <text value="(empty)"/>
@@ -335,7 +337,7 @@
                 <properties>
                   <background color="-11382962"/>
                   <doubleBuffered value="false"/>
-                  <font name="Courier New" size="14" style="1"/>
+                  <font name="Courier New" size="12" style="1"/>
                   <foreground color="-1"/>
                   <opaque value="true"/>
                   <text value="(empty)"/>
@@ -353,7 +355,7 @@
                 <properties>
                   <background color="-11382962"/>
                   <doubleBuffered value="false"/>
-                  <font name="Courier New" size="14" style="1"/>
+                  <font name="Courier New" size="12" style="1"/>
                   <foreground color="-1"/>
                   <opaque value="true"/>
                   <text value="(empty)"/>
@@ -371,7 +373,7 @@
                 <properties>
                   <background color="-11382962"/>
                   <doubleBuffered value="false"/>
-                  <font name="Courier New" size="14" style="1"/>
+                  <font name="Courier New" size="12" style="1"/>
                   <foreground color="-1"/>
                   <opaque value="true"/>
                   <text value="(empty)"/>
@@ -383,7 +385,7 @@
           <grid id="55fad" binding="pnlEquipments" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="124" height="124"/>
               </grid>
             </constraints>
@@ -399,7 +401,11 @@
             <children>
               <component id="d75d5" class="javax.swing.JButton" binding="btnMainWeapon">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="96" height="96"/>
+                    <preferred-size width="96" height="96"/>
+                    <maximum-size width="96" height="96"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <background color="-11382962"/>
@@ -413,7 +419,11 @@
               </component>
               <component id="40e19" class="javax.swing.JButton" binding="btnHead">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="96" height="96"/>
+                    <preferred-size width="96" height="96"/>
+                    <maximum-size width="96" height="96"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <background color="-11382962"/>
@@ -427,7 +437,11 @@
               </component>
               <component id="9f7f1" class="javax.swing.JButton" binding="btnBody">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="96" height="96"/>
+                    <preferred-size width="96" height="96"/>
+                    <maximum-size width="96" height="96"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <background color="-11382962"/>
@@ -441,7 +455,11 @@
               </component>
               <component id="bffb8" class="javax.swing.JButton" binding="btnMisc">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                    <minimum-size width="96" height="96"/>
+                    <preferred-size width="96" height="96"/>
+                    <maximum-size width="96" height="96"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <background color="-11382962"/>
@@ -459,7 +477,7 @@
       </grid>
       <grid id="62695" binding="pnlLoots" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-11382962"/>
